# palanx

./: .exrc  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  a.out  check_core.sh
.claude/skills/coverage/: SKILL.md
.github/: copilot-instructions.md
.github/workflow/: build.yml
.github/workflows/: build.yml
doc/: ASTSpec.md  Issues.md  PalanReference.md  SASpec.md  SpecAndDesign.md  memo.md
localtickets/: iteration-2025-12-26-0007-palan-0.1.0-tasks.md  iteration-2025-12-26-0101-kickoff.md  iteration-2025-12-26-0102-predefs.md  iteration-2025-12-26-0103-define-ast-funcdecl.md  iteration-2025-12-26-0104-c2ast.md  iteration-2025-12-26-0105-gen-ast.md  iteration-2025-12-26-0106-semantic-analyzer.md  iteration-2025-12-26-0107-build-manager.md  iteration-2025-12-26-0108-tests.md  iteration-2025-12-26-0109-docs.md  iteration-2025-12-26-0110-release-prep.md  iteration-2025-12-26-0111-gen-ast-call.md  iteration-2025-12-26-0112-codegen.md
src/build-mgr/: CMakeLists.txt  PlnBuildMgrMessage.cpp  PlnBuildMgrMessage.h  main.cpp
src/c2ast/: CFileInfo.cpp  CFileInfo.h  CLexer.cpp  CLexer.h  CMakeLists.txt  CParser.cpp  CParser.h  CPreprocessor.cpp  CPreprocessor.h  CToken.cpp  PlnC2AstMessage.cpp  PlnC2AstMessage.h  basicTest.cpp  cfileinfo.cpp  cfileinfo.h  clexer.cpp  clexer.h  cparser.cpp  cparser.h  cpreprocessor.cpp  cpreprocessor.h  ctoken.cpp  ctoken.h  main.cpp  predefined.h
src/codegen/: CMakeLists.txt  PlnCodeGen.h  PlnCodegenMessage.cpp  PlnCodegenMessage.h  PlnDeserialize.cpp  PlnDeserialize.h  PlnNode.h  PlnRegAlloc.cpp  PlnRegAlloc.h  PlnVCodeGen.cpp  PlnVCodeGen.h  PlnVProg.h  PlnX86CodeGen.cpp  PlnX86CodeGen.h  codegen.h  deserialize.cpp  deserialize.h  main.cpp  plnnode.h  regalloc.cpp  regalloc.h  vcodegen.cpp  vcodegen.h  vprog.h  x86codegen.cpp  x86codegen.h
src/common/: PlnDefs.h  PlnFileUtils.cpp  PlnFileUtils.h
src/gen-ast/: .gitignore  CMakeLists.txt  PlnGenAstMessage.cpp  PlnGenAstMessage.h  PlnLexer.cpp  PlnLexer.h  PlnLexer.ll  PlnParser.yy  main.cpp
src/semantic-anlyzr/: CMakeLists.txt  PlnSaDecl.cpp  PlnSaExpr.cpp  PlnSaInternal.h  PlnSaMessage.cpp  PlnSaMessage.h  PlnSaStmt.cpp  PlnSemanticAnalyzer.cpp  PlnSemanticAnalyzer.h  PlnType.cpp  PlnType.h  analysis.cpp  analysis.h  main.cpp
test/build-mgr-tester/: CMakeLists.txt  basicTests.cpp  errorTests.cpp
test/c2ast-tester/: CMakeLists.txt  basicTests.cpp  errorTests.cpp
test/codegen-tester/: CMakeLists.txt  basicTests.cpp  errorTests.cpp
test/codegen-unit-tester/: CMakeLists.txt  basicTests.cpp
test/gen-ast-tester/: CMakeLists.txt  basicTests.cpp  errorTests.cpp
test/sa-tester/: CMakeLists.txt  basicTests.cpp  errorTests.cpp
test/sa-unit-tester/: CMakeLists.txt  basicTests.cpp
test/test-base/: CMakeLists.txt  testBase.cpp  testBase.h
test/testdata/: 000_temp.pa  000_temp_c_header.h  003_pragma_once.h  003_pragma_once_main.h  004_char_const.h  005_token_paste_kw.h  006_warning.h  008_include_macro.h  009_include_macro_bracket.h  010_include_next.h
test/testdata/build-mgr/: 001_helloworld.pa  002_var_decl.pa  003_addition.pa  004_int32_widening.pa  005_comparison.pa  006_fibonacci.pa  006_variadic_promotion.pa  007_abs_gcd_lcm.pa  007_cast_narrowing_int16_int8.pa  007_unary_minus.pa  008_register_spill.pa  008_user_func_simple.pa  009_assign.pa  009_seven_param_palan_func.pa  010_divmod_rdx_conflict.pa  010_named_ret_narrowing.pa  011_named_ret_double_assign.pa  011_void_func.pa  012_collatz.pa  012_return_narrowing.pa  013_fizzbuzz.pa  013_multiret.pa  014_param_loop_call_arg.pa  014_type_inherit_decl.pa  015_rdx_divmod_conflict.pa  015_type_inherit_tapple.pa  016_palan_call_as_stmt.pa  016_print_primes.pa  017_multiret_implicit_return.pa  017_narrow_types.pa  018_block_basic.pa  018_float_basics.pa  019_block_in_func.pa  019_float_printf.pa  020_block_cinclude.pa  020_float_mixed_args.pa  021_block_func_def.pa  021_c_float_return.pa  022_block_nested.pa  022_int_to_float_implicit.pa  (+46 more)
test/testdata/c2ast/: 001_va_args.h  002_token_paste.h  007_stringify.h  008_include_macro_body.h  011_line_directive.h  012_unknown_directive.h  013_struct_enum.h  error_001_error_directive.h  error_002_include_not_found.h  error_005_define_no_name.h  error_006_if_expr_error.h  error_007_extra_tokens.h  error_008_invalid_defined.h  error_009_elif_without_if.h  error_010_else_after_else.h  error_011_malformed_macro_args.h  error_012_if_missing_colon.h  error_013_if_invalid_token.h  error_014_if_expr_end.h
test/testdata/codegen/: 001_helloworld.sa.json  002_printf_int_literal.sa.json  003_two_calls.sa.json  004_var_decl.sa.json  005_addition.sa.json  006_convert.sa.json  007_var_decl_int32.sa.json  008_addition_int32.sa.json  009_cast_narrowing.sa.json  010_uint_lit.sa.json  011_ccall_as_expr.sa.json  012_palan_func_simple.sa.json  013_assign.sa.json  014_named_ret_narrowing.sa.json  015_named_ret_double_assign.sa.json  016_multiret.sa.json  017_block.sa.json  018_comparison.sa.json  019_if_stmt.sa.json  020_if_else_stmt.sa.json  021_unary_minus.sa.json  022_sub_int32.sa.json  023_mul_int32.sa.json  024_neg_int32.sa.json  025_cmp_int32.sa.json  026_div_rhs_in_rax.sa.json  027_while_loop.sa.json  028_void_func.sa.json  029_int8_var.sa.json  030_float_var_decl.sa.json  031_float_arg.sa.json  032_float_mixed_args.sa.json  033_uint_convert.sa.json  034_int_convert_extra.sa.json  035_float32_convert.sa.json  036_uint_widen_narrow.sa.json  037_float_arith.sa.json  038_float_cmp.sa.json  039_float_neg.sa.json  040_array_buf.sa.json  (+21 more)
test/testdata/gen-ast/: 001_basicPattern.pa  002_arraypattern.pa  003_cast_syntax.pa  004_cast_compound.pa  005_func_def.pa  006_block.pa  007_export_func.pa  008_if_stmt.pa  009_while_loop.pa  010_optional_semicolon.pa  011_break_continue.pa  012_stmt_list_patterns.pa  013_float_literal.pa  014_array_decl.pa  015_arr_index_expr.pa  016_arr_assign_stmt.pa  017_multidim_arr.pa  018_logical_ops.pa  019_embed_arr_decl.pa  020_uint_literal.pa  021_member_call.pa  022_struct_def.pa  023_field_access.pa  024_embed_struct_field.pa  101_cast.pa  (+5 more)
(+113 files in other folders)
